# alto-AI_mac_cleaner

./: LICENSE  README.md  latest.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: ALTO_VS_CLEANMYMAC_X_COMPARISON.md  Architecture.md  CODEBASE_AUDIT.md  Home.md  RELEASE.md  Roadmap.md  User-Guide.md
scripts/: build_windows.ps1  release.sh
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  menu-capability.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: install_helper.sh
src-tauri/src/: helper_client.rs  lib.rs  main.rs
src-tauri/src/data/: app_rules.json
src-tauri/src/mcp/: context_store.rs  file_index.rs  mod.rs
src-tauri/src/scanners/: extensions.rs  junk.rs  large_files.rs  mail.rs  maintenance.rs  malware.rs  mod.rs  monitor.rs  privacy.rs  process.rs  scheduler.rs  shredder.rs  space_lens.rs  speed.rs  system_stats.rs  uninstaller.rs  updater.rs  watcher.rs
src/components/: AiInsight.tsx  AltoAvatar.tsx  Button.tsx  NotificationManager.tsx  Sidebar.tsx
src/components/chat/: ActionChips.tsx  DeleteConfirmCard.tsx  MentionList.tsx  RichResultCard.tsx  (+4 more)
src/hooks/: useTauri.ts
src/layouts/: AppLayout.tsx
src/pages/: Assistant.tsx  Dashboard.tsx  Extensions.tsx  Help.tsx  LargeFiles.tsx  MailCleaner.tsx  Maintenance.tsx  Malware.tsx  MenuApp.tsx  Onboarding.tsx  Optimization.tsx  Privacy.tsx  Settings.tsx  Shredder.tsx  SpaceLens.tsx  SystemJunk.tsx  TrashBins.tsx  Uninstaller.tsx  Updater.tsx
src/services/: aiService.ts
src/store/: scanStore.ts
src/utils/: aiLogic.ts  sounds.ts
(+1 files in other folders)
