[package]
name = "alto"
version = "2.1.5"
description = "Alto: AI System Cleaner & Optimizer (macOS & Windows)"
authors = ["Arif Adito"]
edition = "2021"
rust-version = "1.77"
default-run = "alto"

[lib]
name = "mac_cleaner_lib"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "alto"
path = "src/main.rs"

[[bin]]
name = "alto_helper"
path = "src/bin/alto_helper.rs"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2.2"
tauri-plugin-notification = "2.2"
tauri-plugin-updater = "2.2"
tauri-plugin-process = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
trash = "3"
cron = "0.12"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
sysinfo = "0.30"
lazy_static = "1.4"
walkdir = "2.3"
rand = "0.8"
notify = "6.1.1"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.7.4"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3.24.0"

[profile.release]
lto = true        # Link Time Optimization
codegen-units = 1 # Better optimization at cost of compile time
panic = "abort"   # Smaller binary
strip = true      # Remove symbols
opt-level = 3     # Max optimization
